# iparty_files

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  VALIDATION.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: iteration-1-persona-loop.md  iteration-2-jepa-ttl.md  iteration-3-security-and-ui.md
docs/gtm/: vendor_catalog_template.csv  week0-4_playbook.md
scripts/: personas.py  personas2.py  run_personas.py  security_scan.py  validate_live.py
src/iparty/: __init__.py
src/iparty/api/: app.py  events.py  routes.py
src/iparty/core/: config.py  exceptions.py  logging.py
src/iparty/llm/: client.py
src/iparty/orchestration/: jepa_bridge.py  ttl_engine.py
src/iparty/planning/: feasibility.py  grounding.py  models.py  planner.py  prompts.py  verifier.py
src/iparty/pricing/: catalog.py
tests/: conftest.py  test_catalog_csv.py  test_events.py  test_jepa_bridge.py  test_loop_regressions.py  test_planner_api.py  test_properties.py  test_safety_adversarial.py  test_security.py  test_ttl_engine.py  test_v2_improvements.py  test_verifier.py
web/: index.html
